circleimageview 라이브러리 속성 적용

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,9 @@
             android:layout_width="120dp"
             android:src="@drawable/yuna"
             android:scaleType="centerCrop"
-            android:layout_height="120dp"/>
+            android:layout_height="120dp"
+            app:civ_border_color="@color/black"
+            app:civ_border_width="2dp"/>
         <TextView
             android:text="김연아"
             android:layout_marginTop="10dp"
