전화 연결 (CALL) 기능 UI 그리기

--- a/app/src/main/res/layout/activity_view_photo.xml
+++ b/app/src/main/res/layout/activity_view_photo.xml
@@ -8,9 +8,9 @@
     android:background="@color/black"
     tools:context=".ViewPhotoActivity">
 
-    <ImageView
-        android:src="@drawable/yuna"
+    <com.github.chrisbanes.photoview.PhotoView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:src="@drawable/yuna" />
 
 </LinearLayout>
