인터넷에 있는 이미지를 바로 띄워줄 공감 (ImageView) 배치

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -63,5 +63,18 @@
 
     </LinearLayout>
 
+    <TextView
+        android:text="최근 활동 내역"
+        android:layout_marginTop="10dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+    <ImageView
+        android:id="@+id/imgActivity"
+        android:layout_width="match_parent"
+        android:layout_height="250dp"
+        android:layout_marginTop="10dp"
+        android:src="@mipmap/ic_launcher"
+        android:scaleType="centerCrop"/>
+
 
 </LinearLayout>
