--- a/app/src/main/res/layout/activity_spash.xml
+++ b/app/src/main/res/layout/activity_spash.xml
@@ -7,9 +7,11 @@
     android:orientation="vertical"
     android:gravity="center"
     tools:context=".SpashActivity">
-    <ImageView
+    <com.airbnb.lottie.LottieAnimationView
+        app:lottie_rawRes="@raw/flying_plane"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"
         android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:src="@mipmap/ic_launcher"/>
+        android:layout_height="150dp"/>
 
 </LinearLayout>
